; ModuleID = '/home/carl/AnghaBench/mruby/src/extr_dump.c_write_padding.c'
source_filename = "/home/carl/AnghaBench/mruby/src/extr_dump.c_write_padding.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MRB_DUMP_ALIGNMENT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*)* @write_padding to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @write_padding(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i64, i64* @MRB_DUMP_ALIGNMENT, align 8
  store i64 %5, i64* %3, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = ptrtoint i32* %6 to i64
  %8 = sub nsw i64 0, %7
  %9 = load i64, i64* %3, align 8
  %10 = sub i64 %9, 1
  %11 = and i64 %8, %10
  store i64 %11, i64* %4, align 8
  %12 = load i64, i64* %4, align 8
  %13 = icmp ugt i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %1
  %15 = load i32*, i32** %2, align 8
  %16 = load i64, i64* %4, align 8
  %17 = call i32 @memset(i32* %15, i32 0, i64 %16)
  br label %18

18:                                               ; preds = %14, %1
  %19 = load i64, i64* %4, align 8
  ret i64 %19
}

declare dso_local i32 @memset(i32*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
